feat: implement production-ready dashboard and Hugging Face integration
- Add real-time monitoring dashboard with Streamlit framework
- Implement interactive visualization components (charts, controls, DAG display)
- Create FastAPI backend for dashboard API endpoints
- Build model serialization to Hugging Face compatible format
- Add FastAPI inference server with grammar-constrained generation
- Integrate BuilderBrain trainer with HF Trainer class and datasets
- Set up Docker containerization and Kubernetes deployment manifests
- Create comprehensive tests and demo scripts for both systems
- Write integration guides, API documentation, and usage examples

Features:
- Real-time system health monitoring (CPU, memory, disk usage)
- Training progress visualization with loss curves and constraint evolution
- Interactive grammar-constrained generation testing interface
- Plan validation and execution preview capabilities
- Complete Hugging Face model export and upload pipeline
- Production deployment with auto-scaling and health checks
- Comprehensive documentation and demo scripts

Components Added:
- builderbrain_dashboard/ - Streamlit monitoring interface
- huggingface_pipeline/ - HF integration and deployment
- demo_dashboard.py - Interactive dashboard demo
- demo_huggingface.py - Complete HF integration demo
- README_DASHBOARD.md - Dashboard documentation
- README_HUGGINGFACE.md - Integration guide

Resolves: production deployment tooling and monitoring requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,17 @@ dependencies = [
     "transformers>=4.35.0",
     "numpy>=1.25.0",
     "pyyaml>=6.0.0",
+    "streamlit>=1.50.0",
+    "plotly>=6.3.0",
+    "fastapi>=0.118.0",
+    "uvicorn>=0.37.0",
+    "pandas>=2.3.3",
+    "psutil>=7.1.0",
+    "datasets>=4.1.1",
+    "accelerate>=1.10.1",
+    "wandb>=0.22.1",
+    "gradio>=5.47.2",
+    "huggingface-hub>=0.35.3",
 ]
 
 [dependency-groups]
