Update Dockerfiles to ensure safe removal of existing virtual environments
- Modified the Dockerfile in both builderbrain_dashboard and huggingface_pipeline to use '|| true' in the command that removes the .venv directory. This change prevents build failures if the directory does not exist, enhancing the robustness of the Docker build process.

--- a/builderbrain_dashboard/Dockerfile
+++ b/builderbrain_dashboard/Dockerfile
@@ -32,7 +32,7 @@ ENV PYTHONDONTWRITEBYTECODE=1
 COPY . ./
 
 # Clean up any existing virtual environment with wrong permissions
-RUN rm -rf .venv
+RUN rm -rf .venv || true
 
 # Expose port
 EXPOSE 8501
