--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -31,6 +31,9 @@ jobs:
           ruby-version: '3.1'
           bundler-cache: true
 
+      - name: Install dependencies
+        run: bundle install
+
       - name: Build with Jekyll
         run: |
           bundle exec jekyll build
